<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">

     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/blogger"
         app:civ_border_width="2dp"
         app:civ_border_color="#FF000000"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"/>

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="25sp"
         android:gravity="center"
         android:layout_marginTop="10dp"
         android:textColor="#EC407A"
         android:text="user name"/>

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="17sp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/hint_profile_desc"
         android:textColor="#64FFDA"/>

     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:orientation="horizontal"
             android:weightSum="3">

             <LinearLayout
                 android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
                 android:gravity="center">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="25000"
                 android:textSize="20sp"
                 android:textStyle="bold"/>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Student"
                 android:layout_gravity="center" />

         </LinearLayout>

             <View
                 android:layout_width="1dp"
                 android:layout_height="40dp"
                 android:layout_margin="10dp"
                 android:background="#9E9E9E" />

             <LinearLayout
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="100"
                     android:textSize="20sp"
                     android:textStyle="bold"/>

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="cource"
                     android:layout_gravity="center" />

             </LinearLayout>

             <View
                 android:layout_width="1dp"
                 android:layout_height="40dp"
                 android:layout_margin="10dp"
                 android:background="#9E9E9E" />

             <LinearLayout
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4.5"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:drawableLeft="@drawable/ic_star_black_24dp"
                     android:drawablePadding="2dp"/>

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Rating"
                     android:layout_gravity="center" />

             </LinearLayout>



         </LinearLayout>

     </android.support.v7.widget.CardView>

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:textStyle="bold"
         android:text="Choose By jose nuzz"
         android:layout_margin="10dp"/>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">

     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginEnd="10dp">
     </android.support.v7.widget.RecyclerView>
     </LinearLayout>



     <!-- Social Link -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:textStyle="bold"
         android:text="@string/hint_connect"
         android:layout_marginLeft="15dp"/>

     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp">

         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="left"
             android:layout_margin="10dp"
             android:src="@drawable/ic_chat_bubble_outline_black_24dp"/>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hint_facebook"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:drawablePadding="10dp" />



         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="right"
             android:layout_margin="10dp"
             android:src="@drawable/ic_add_black_24dp"/>

     </android.support.v7.widget.CardView>

     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_gravity="left"
         android:layout_marginTop="10dp">

         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="left"
             android:layout_margin="10dp"
             android:src="@drawable/ic_whatshot_black_24dp"/>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hint_tumbler"
             android:textSize="20sp"
             android:textStyle="bold"
             android:drawablePadding="10dp"
             android:layout_gravity="center"/>

         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="right"
             android:layout_margin="10dp"
             android:src="@drawable/ic_check_black_24dp"/>

     </android.support.v7.widget.CardView>

     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_gravity="left"
         android:layout_marginTop="10dp"
         android:paddingBottom="10dp"
         android:layout_marginBottom="10dp">

         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="left"
             android:layout_margin="10dp"
             android:src="@drawable/ic_next_week_black_24dp"/>



         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hint_twitter"
             android:textSize="20sp"
             android:textStyle="bold"
             android:drawablePadding="10dp"
             android:layout_gravity="center"/>

         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="right"
             android:layout_margin="10dp"
             android:src="@drawable/ic_add_black_24dp"/>

     </android.support.v7.widget.CardView>







 </LinearLayout>


 </ScrollView>
</FrameLayout>